# python-project-83

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: app.py  check.py  data.py  repository.py  url.py  validator.py
page_analyzer/templates/: index.html  url.html  urls.html
